# cali

./: .gitignore  Cargo.toml  LICENSE.md  README.md  planning.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/entry/: main.rs
cli/src/scaffold/: controller.rs  mod.rs  new.rs  store.rs
cli/templates/: Cargo.toml.tt  README.md.tt  web.Cargo.toml.tt
cli/templates/core/: Cargo.toml.tt
cli/templates/store/: Cargo.toml.tt
cli/templates/web/: Cargo.toml.tt  build.rs.tt  config.rs.tt  dev.yml.tt  main.rs.tt
cli/templates/web/config/: dev.yml.tt  test.yml.tt
cli/templates/web/src/: config.rs.tt  lib.rs.tt
cli/templates/web/src/controllers/: mod.rs.tt
cli/templates/web/src/entry/: main.rs.tt
cli/templates/web/tests/common/: mod.rs.tt
core/: Cargo.toml  README.md
core/src/: lib.rs
core/src/config/: mod.rs
core/src/helpers/: mod.rs
core/src/logging/: util.rs
core/src/middleware/: mod.rs  server_context.rs
core/src/protos/: parser.rs
core/src/scaffolding/: controller.rs
core/src/store/: mod.rs  snare.rs
derive/: Cargo.toml
derive/src/: lib.rs
