[package]
name = "flair_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
flair_core = { version = "*", path = "../core" }
clap = { version = "4.0.22", features = ["derive"] }


[[bin]]
name = "main"
path = "src/entry/main.rs"
