[package]
name = "flair_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.1"
convert_case = "0.5.0"
proc-macro2 = { version = "1.0.66", features = ["default", "span-locations"] }
syn = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
flair_core = { version = "*", path = "../core" }
clap = { version = "4.0.22", features = ["derive"] }
quote = "1.0"
pluralizer = "0.4.0"
rust-format = "0.3.4"

[[bin]]
name = "flair_cli"
path = "src/entry/main.rs"
