[package]
name = "cali_cli"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Cali's codegen and cli application"
repository = "https://github.com/DiaanEngelbrecht/cali"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinytemplate = "1.1"
convert_case = "0.5.0"
proc-macro2 = { version = "1.0.66", features = ["default", "span-locations"] }
syn = { version = "2.0" }
serde = { version = "1.0", features = ["derive"] }
cali_core = "0.2.0"
clap = { version = "4.0.22", features = ["derive"] }
quote = "1.0"
pluralizer = "0.4.0"
rust-format = "0.3.4"

[[bin]]
name = "cali"
path = "src/entry/main.rs"
