[package]
name = "cali_core"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Cali is a batteries included, opinionated rust based microservice framework."
repository = "https://github.com/DiaanEngelbrecht/cali"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tower = "0.4.13"
tonic = "0.9.2" 
log = "0.4.17"
log4rs = "1.1.1"
tokio = { version = "1.32", features = ["rt-multi-thread", "time", "macros", "signal", "process"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "mysql", "chrono", "bigdecimal", "macros"] }
