[package]
name = "cali_core"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Cali is a batteries included, opinionated rust based microservice framework."
repository = "https://github.com/DiaanEngelbrecht/cali"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
tower = "0.4.13"
tonic = "0.12.1"
log = "0.4.22"
log4rs = "1.3.0"
tokio = { version = "1.39.2", features = [
  "rt-multi-thread",
  "time",
  "macros",
  "signal",
  "process",
  "tracing",
] }
sqlx = { version = "0.8.0", default-features = false, features = [
  "runtime-tokio-native-tls",
  "mysql",
  "chrono",
  "bigdecimal",
  "macros",
] }
