[package]
name = "cali_derive"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Contains the macro's used to simplify a Cali project's setup & testing."
repository = "https://github.com/DiaanEngelbrecht/cali"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0" }
quote = "1.0"
convert_case = "0.5.0"
proc-macro2 = { version = "1.0.66", features = ["default", "span-locations"] }
cali_core = "0.3.0"

